[gd_scene load_steps=11 format=3 uid="uid://bpda5excxay2u"]

[ext_resource type="Texture2D" uid="uid://cmmro5b5ygvks" path="res://Art/Placeholder/Cube.png" id="1_23mms"]
[ext_resource type="Texture2D" uid="uid://jaalsnw8mcg4" path="res://Art/Placeholder/TilemapTest.png" id="1_sdypg"]
[ext_resource type="Script" path="res://Script/Player.gd" id="2_oo7q3"]
[ext_resource type="Texture2D" uid="uid://cunkijcbq4lg5" path="res://Art/Placeholder/UI-Template.png" id="3_k82fe"]
[ext_resource type="Script" path="res://Script/Dummy.gd" id="3_w5tgt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3dxw1"]
texture = ExtResource("1_sdypg")
texture_region_size = Vector2i(100, 100)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-22.981, -28.2843, 13.0815, -23.3345, 15.2028, 50, -23.6881, 50)
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.42462, -14.8492, 50, -15.5564, 50, 50, -11.6673, 50)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -16.2635, 50, -15.5564, 50, 50, -50, 50)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -16.2635, -1.76777, -13.435, -3.88908, 50, -50, 50)
3:0/0/terrains_peering_bit/bottom_side = 0
3:0/0/terrains_peering_bit/bottom_left_corner = 0
3:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-21.5668, -50, 13.7886, -50, 15.2028, 50, -23.6881, 50)
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.6673, -50, 50, -50, 50, 50, -11.6673, 50)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_right_corner = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
2:1/0/terrains_peering_bit/top_right_corner = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, -2.47487, -50, -3.88908, 50, -50, 50)
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/bottom_left_corner = 0
3:1/0/terrains_peering_bit/left_side = 0
3:1/0/terrains_peering_bit/top_left_corner = 0
3:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-21.5668, -50, 13.7886, -50, 12.3744, 35.3553, -21.5668, 34.6482)
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.6673, -50, 50, -50, 50, 7.07107, -11.6673, 4.24264)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, 50, -50, 50, 7.07107, -50, 4.94975)
2:2/0/terrains_peering_bit/right_side = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
2:2/0/terrains_peering_bit/top_right_corner = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -50, -2.47487, -50, 0.353554, 4.24264, -50, 4.24264)
3:2/0/terrains_peering_bit/left_side = 0
3:2/0/terrains_peering_bit/top_left_corner = 0
3:2/0/terrains_peering_bit/top_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-25.1023, -20.5061, 50, -19.799, 50, 18.3848, -25.8094, 14.8492)
1:3/0/terrains_peering_bit/right_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -23.3345, 50, -19.799, 50, 18.3848, -50, 16.9706)
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-50, -23.3345, -0.353554, -21.2132, -1.06066, 13.435, -50, 16.9706)
3:3/0/terrains_peering_bit/left_side = 0

[sub_resource type="TileSet" id="TileSet_0y051"]
tile_size = Vector2i(100, 100)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Ground 0"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 0.25098, 1)
sources/0 = SubResource("TileSetAtlasSource_3dxw1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lvna"]
size = Vector2(239, 115)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23uny"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rhcva"]
size = Vector2(64, 64)

[node name="TestWorld" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_0y051")
format = 2
layer_0/tile_data = PackedInt32Array(589840, 65536, 0, 589841, 131072, 0, 589842, 131072, 0, 589843, 131072, 0, 589844, 131072, 0, 589845, 131072, 0, 655381, 131072, 2, 655380, 131072, 2, 655379, 131072, 2, 655378, 131072, 2, 655377, 131072, 2, 655376, 65536, 2, 655382, 131072, 1, 655383, 131072, 1, 655384, 131072, 1, 655385, 131072, 1, 589847, 131072, 1, 524311, 131072, 0, 524310, 65536, 0, 589846, 131072, 1, 589848, 131072, 1, 589849, 131072, 1, 524313, 131072, 1, 458776, 65536, 0, 458777, 131072, 0, 458778, 131072, 0, 458779, 131072, 0, 524312, 131072, 1, 524314, 131072, 1, 524315, 131072, 1, 589850, 131072, 1, 655386, 131072, 1, 655387, 131072, 1, 655388, 131072, 1, 589852, 131072, 1, 524316, 131072, 1, 589851, 131072, 1, 720923, 131072, 1, 720924, 131072, 1, 786460, 131072, 2, 655389, 131072, 1, 786459, 131072, 2, 786461, 131072, 2, 720925, 131072, 1, 655390, 131072, 1, 720926, 131072, 1, 589853, 131072, 1, 524317, 131072, 1, 458780, 131072, 0, 458781, 196608, 0, 589854, 131072, 1, 720922, 131072, 1, 786457, 131072, 2, 786456, 131072, 2, 720920, 131072, 1, 720921, 131072, 1, 786458, 131072, 2, 720919, 131072, 1, 786455, 65536, 2, 720918, 131072, 2, 786462, 131072, 2, 786463, 131072, 2, 720927, 131072, 1, 720928, 131072, 1, 720929, 131072, 1, 720930, 131072, 1, 720931, 131072, 1, 786467, 131072, 2, 786468, 131072, 2, 786469, 131072, 2, 786470, 196608, 2, 786466, 131072, 2, 786464, 131072, 2, 786465, 131072, 2, 720933, 131072, 1, 720932, 131072, 1, 655394, 131072, 1, 655395, 131072, 1, 655396, 131072, 1, 655397, 131072, 1, 655398, 131072, 1, 720934, 131072, 1, 655392, 131072, 1, 655391, 131072, 1, 589856, 131072, 1, 655393, 131072, 1, 589858, 131072, 1, 589859, 131072, 1, 589860, 131072, 1, 589861, 131072, 1, 589855, 131072, 1, 524318, 131072, 0, 524319, 131072, 0, 524320, 131072, 0, 524321, 131072, 0, 524322, 131072, 0, 524323, 131072, 0, 524324, 131072, 0, 589857, 131072, 1, 524325, 131072, 0, 524326, 131072, 0, 524327, 131072, 0, 589864, 131072, 1, 589865, 131072, 1, 589863, 131072, 1, 589862, 131072, 1, 524328, 131072, 0, 524329, 131072, 0, 524330, 196608, 0, 589866, 196608, 1, 655400, 131072, 1, 655399, 131072, 1, 720935, 131072, 2, 720936, 131072, 2, 655401, 131072, 1, 655402, 196608, 2, 720937, 196608, 2)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(2657, -1870)
script = ExtResource("2_oo7q3")

[node name="Visuals" type="Node2D" parent="Player"]

[node name="Texture" type="Sprite2D" parent="Player/Visuals"]
scale = Vector2(2, 3)
texture = ExtResource("1_23mms")

[node name="Sword" type="Node2D" parent="Player"]

[node name="SwordCollision" type="Area2D" parent="Player/Sword"]

[node name="CollisionShape" type="CollisionShape2D" parent="Player/Sword/SwordCollision"]
position = Vector2(109.5, 0.5)
shape = SubResource("RectangleShape2D_3lvna")
debug_color = Color(0.866667, 0, 0.239216, 0.419608)

[node name="SwordSprite" type="Sprite2D" parent="Player/Sword"]
z_index = -1
position = Vector2(98.5, 0.499956)
scale = Vector2(7.15625, 1.59375)
texture = ExtResource("1_23mms")

[node name="PhysicsCollision" type="CollisionShape2D" parent="Player"]
scale = Vector2(2, 2.8)
shape = SubResource("RectangleShape2D_23uny")

[node name="Camera" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
position_smoothing_speed = 4.0
drag_vertical_enabled = true
drag_top_margin = 0.1
drag_bottom_margin = 0.5

[node name="Cayote" type="Timer" parent="Player"]
one_shot = true

[node name="SwordCooldown" type="Timer" parent="Player"]
wait_time = 0.3
one_shot = true

[node name="SwordSwing" type="Timer" parent="Player"]
wait_time = 0.1
one_shot = true

[node name="Dummy" type="CharacterBody2D" parent="." groups=["enemy"]]
position = Vector2(3068, 555)
script = ExtResource("3_w5tgt")

[node name="Sprite" type="Sprite2D" parent="Dummy"]
modulate = Color(1, 0, 0.133333, 1)
scale = Vector2(2, 2)
texture = ExtResource("1_23mms")

[node name="CollisionShape" type="CollisionShape2D" parent="Dummy"]
shape = SubResource("RectangleShape2D_rhcva")

[node name="HealthBar" type="ProgressBar" parent="Dummy"]
offset_left = -89.0
offset_top = -70.0
offset_right = 96.0
offset_bottom = -43.0

[node name="Dummy2" type="CharacterBody2D" parent="." groups=["enemy"]]
position = Vector2(3512, 575)
script = ExtResource("3_w5tgt")

[node name="Sprite" type="Sprite2D" parent="Dummy2"]
modulate = Color(1, 0, 0.133333, 1)
scale = Vector2(2, 2)
texture = ExtResource("1_23mms")

[node name="CollisionShape" type="CollisionShape2D" parent="Dummy2"]
shape = SubResource("RectangleShape2D_rhcva")

[node name="HealthBar" type="ProgressBar" parent="Dummy2"]
offset_left = -89.0
offset_top = -70.0
offset_right = 96.0
offset_bottom = -43.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UI-Template" type="TextureRect" parent="UI/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_k82fe")

[connection signal="body_entered" from="Player/Sword/SwordCollision" to="Player" method="_on_sword_collision_body_entered"]
[connection signal="timeout" from="Player/Cayote" to="Player" method="_on_cayote_timeout"]
[connection signal="timeout" from="Player/SwordCooldown" to="Player" method="_on_sword_cooldown_timeout"]
[connection signal="timeout" from="Player/SwordSwing" to="Player" method="_on_sword_swing_timeout"]
